--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3"
   }
 }
