--- a/package.json
+++ b/package.json
@@ -7,3 +7,9 @@
     "react-router-dom": "^6.22.3"
   }
 }
+"scripts": {
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test"
+}
+
