--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3"
+  
+},
+
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "build-render": "npm start && npm run build"
   }
-}
-"scripts": {
-  "start": "react-scripts start",
-  "build": "react-scripts build",
-  "test": "react-scripts test"
 }
 
