--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -6,7 +6,7 @@ attrs==23.2.0
 backcall==0.2.0
 bcrypt==4.1.2
 blinker==1.6.3
-cffi==1.16.0
+cffi==1.15.0
 click==8.1.7
 cryptography==42.0.5
 decorator==5.1.1
@@ -20,8 +20,8 @@ Flask-Migrate==4.0.7
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.0.3
 greenlet==3.0.3
-importlib_metadata==7.1.0
-importlib_resources==6.4.0
+importlib-metadata==7.1.0
+importlib-resources==6.4.0
 iniconfig==2.0.0
 ipdb==0.13.9
 ipython==8.12.3
@@ -58,7 +58,7 @@ toml==0.10.2
 tomli==2.0.1
 traitlets==5.14.2
 typer==0.10.0
-typing_extensions==4.11.0
+typing-extensions==4.11.0
 wcwidth==0.2.13
 Werkzeug==2.2.2
 zipp==3.18.1
