--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,64 +1,61 @@
-alembic==1.12.1
+alembic==1.6.5
 aniso8601==9.0.1
-appnope==0.1.4
-asttokens==2.4.1
-attrs==23.2.0
+appnope==0.1.2
+# asttokens==2.0.5
+attrs==21.2.0
 backcall==0.2.0
-bcrypt==4.1.2
-blinker==1.6.3
-cffi==1.15.0
-click==8.1.7
-cryptography==42.0.5
-decorator==5.1.1
-executing==2.0.1
-Faker==24.11.0
-Flask==2.2.5
-Flask-Bcrypt==1.0.1
-Flask-Cors==4.0.0
-Flask-JWT-Extended==4.6.0
-Flask-Migrate==4.0.7
-Flask-RESTful==0.3.10
-Flask-SQLAlchemy==3.0.3
-greenlet==3.0.3
-importlib-metadata==7.1.0
-importlib-resources==6.4.0
-iniconfig==2.0.0
+bcrypt==3.2.0
+blinker==1.4
+cffi==1.14.6
+click==8.0.3
+cryptography==3.4.8
+decorator==5.1.0
+executing>=1.2.0
+Faker==8.13.2
+Flask==2.0.3
+Flask-Bcrypt==0.7.1
+Flask-Cors==3.0.10
+Flask-JWT-Extended==4.3.1
+Flask-Migrate==3.1.0
+Flask-RESTful==0.3.9
+greenlet==1.1.1
+importlib-metadata==4.8.1
+importlib-resources==5.3.0
+iniconfig==1.1.1
 ipdb==0.13.9
-ipython==8.12.3
-itsdangerous==2.2.0
-jedi==0.19.1
-Jinja2==3.1.3
-jwt==1.3.1
-Mako==1.3.3
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
+ipython==7.30.1
+itsdangerous==2.1.0
+jedi==0.18.0
+Jinja2==3.0.3
+Mako==1.1.5
+MarkupSafe==2.1.0
 matplotlib-inline==0.1.7
 mdurl==0.1.2
-packaging==24.0
-parso==0.8.4
-pexpect==4.9.0
+packaging==21.3
+parso==0.8.2
+pexpect==4.8.0
 pickleshare==0.7.5
-pluggy==1.4.0
-prompt-toolkit==3.0.43
+pluggy==1.0.0
+prompt-toolkit==3.0.24
 ptyprocess==0.7.0
-pure-eval==0.2.2
+pure-eval==0.2.1
 py==1.11.0
-pycparser==2.22
-Pygments==2.17.2
-PyJWT==2.8.0
-pytest==7.1.3
-python-dateutil==2.9.0.post0
-pytz==2024.1
+pycparser==2.20
+Pygments==2.13.0
+PyJWT==2.1.0
+pytest==7.0.1
+python-dateutil==2.8.2
+pytz==2021.3
 rich==13.7.1
 six==1.16.0
-SQLAlchemy==2.0.29
+SQLAlchemy==1.4.12
 SQLAlchemy-serializer==1.4.12
 stack-data==0.6.3
 toml==0.10.2
-tomli==2.0.1
-traitlets==5.14.2
-typer==0.10.0
-typing-extensions==4.11.0
-wcwidth==0.2.13
-Werkzeug==2.2.2
-zipp==3.18.1
+tomli==1.2.1
+traitlets==5.1.0
+typer==0.4.0
+typing-extensions==4.0.1
+wcwidth==0.2.5
+Werkzeug==2.0.3
+zipp==3.7.0
